--- a/style.css
+++ b/style.css
@@ -1,55 +1,81 @@
-header{
-    .logo{
-        display: flex;
-        align-items: center; 
-        gap: 15px; 
-        color: #C92071;
-        
-      }
-      
-      .logo img {
-        width: 33px; height: 33px;
-      }
+* {
+    margin: 0;
+    padding: 0;
+}
 
-      nav a{ 
+body,
+html {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+header {
+    .logo {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        color: #C92071;
+
+    }
+
+    .logo img {
+        width: 33px;
+        height: 33px;
+    }
+
+    nav a {
         color: rgb(0, 0, 0);
         text-decoration: none;
         font-weight: bold;
         padding: 0px 15px;
     }
-    
-    nav a:hover{
+
+    nav a:hover {
         text-decoration: underline;
         color: #C92071;
     }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    .itens {
+        margin: 0;
+        display: flex;
+        gap: 20px;
+        align-items: center;
+        padding: 0;
+        border: 30px;
+        justify-content: center;
+        list-style: none;
+        color: rgb(112, 110, 110);
+        cursor: pointer;
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
 
 
 
@@ -94,4 +120,28 @@ footer {
     }
 
 
+}
+
+.search-bar input {
+    padding: 8px 12px;
+    border: 1px solid #000000;
+    border-radius: 20px;
+    outline: none;
+    font-size: 14px;
+}
+
+.search-bar button {
+    padding: 8px 12px;
+    background-color: #ffffff;
+    /* cor de fundo do botão /
+    color: #fff;             / cor do ícone ou texto */
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background 0.3s;
+}
+
+.search-bar button:hover {
+    background-color: #333;
 }
