--- a/pagina2.css
+++ b/pagina2.css
@@ -1,89 +1,21 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 
-body,
-html {
+body, html {
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-
-header {
-    .logo {
-        display: flex;
-        align-items: center;
-        gap: 15px;
-        color: #C92071;
-
-    }
-
-    .logo img {
-        width: 33px;
-        height: 33px;
-    }
-
-    nav a {
-        color: rgb(0, 0, 0);
-        text-decoration: none;
-        font-weight: bold;
-        padding: 0px 15px;
-    }
-
-    nav a:hover {
-        text-decoration: underline;
-        color: #C92071;
-    }
-
-    .itens {
-        margin: 0;
-        display: flex;
-        gap: 20px;
-        align-items: center;
-        padding: 0;
-        border: 30px;
-        justify-content: center;
-        list-style: none;
-        color: rgb(112, 110, 110);
-        cursor: pointer;
-    }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-}
-
-
-
-
 footer {
-    background-color: black;
+    background-color: #1f1f1f;
     color: white;
     padding: 72px 104px 10px;
+    display: grid;
+    justify-content: center;
 
 
     .sera {
@@ -97,7 +29,17 @@ footer {
     .categoria,
     .contato {
         margin-left: 110px;
-
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        gap: 15px;
+        font-family: Inter;
+        h3{
+            font-size: 18px;
+        }
+        p{
+            font-size: 16px;
+        }
     }
 
     .logod {
@@ -117,6 +59,7 @@ footer {
 
     .copy {
         text-align: center;
+        font-size: 13px;
     }
 
 
@@ -145,6 +88,12 @@ footer {
 .search-bar button:hover {
     background-color: #333;
 }
-h3 {
-    font-size: 18px;
+.divFinal {
+    margin: 75px 0px 0px;
+    display: grid;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    margin-bottom: 1rem;
 }
+
