--- a/pagina1.css
+++ b/pagina1.css
@@ -57,16 +57,16 @@ section {
 
     .texto_na_imagem {
         position: absolute;
-        top: 50%;
-        left: 40%;
+        top: 40%;
+        left: 30%;
         transform: translate(-50%, -50%);
         color: rgb(0, 0, 0);
         font-size: 24px;
         font-weight: bold;
 
         h1 {
-            font-family: Inter;
-            font-weight: bolder;
+            
+            font-weight: 700;
             font-size: 64px;
         }
 
@@ -80,7 +80,9 @@ section {
         }
 
         .oferta {
-            color: #C92071;
+            color: orange;
+            font-weight: 900;
+            
 
         }
 
@@ -88,9 +90,10 @@ section {
         .botao1 {
             width: 237px;
             height: 51px;
-            border-radius: 8.64px;
+            border-radius: 8px;
             background-color: #C92071;
             color: white;
+            
 
         }
 
