--- a/pagina2.css
+++ b/pagina2.css
@@ -40,17 +40,24 @@ footer {
         p{
             font-size: 16px;
         }
+        p:hover{
+            color: #C92071;
+            }
+        
     }
 
     .logod {
         margin-right: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
 
     }
 
     .logos {
-        img {
+        /* img {
             width: 20px;
-        }
+        } */
 
         display: flex;
         gap: 20px;
