--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body,
 html {
+    margin: 0;
+    padding: 0;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-x: hidden;
+
+}
+body{
+max-width: 100vw;
 }
 
 header {
@@ -79,7 +87,7 @@ footer {
     background-color: black;
     color: white;
     padding: 72px 104px 10px;
-
+max-width: 100vw;
 
     .sera {
         display: grid;
