--- a/pagina1.css
+++ b/pagina1.css
@@ -113,7 +113,14 @@ section {
     }
 }
 
+.coleçoes{
+display: grid;
+grid-template-columns: 300px 300px 300px;
+justify-content: center;
 
+
+
+}
 
 
 
