--- a/pagina1.css
+++ b/pagina1.css
@@ -65,7 +65,7 @@ section {
         font-weight: bold;
 
         h1 {
-            
+
             font-weight: 700;
             font-size: 64px;
         }
@@ -82,7 +82,7 @@ section {
         .oferta {
             color: orange;
             font-weight: 900;
-            
+
 
         }
 
@@ -93,7 +93,7 @@ section {
             border-radius: 8px;
             background-color: #C92071;
             color: white;
-            
+
 
         }
 
@@ -110,25 +110,45 @@ section {
         position: absolute;
         top: 50px;
         left: 90%;
+        
     }
 }
 
-.coleçoes{
+.coleçoes {
 
-display: grid;
-grid-template-columns: 300px 300px 300px;
-justify-content: center;
- .card{
-    background-color: #D8E3F2;
+    display: grid;
+    grid-template-columns: 450px 450px 450px;
+    justify-content: center;
 
-    display: flex;
- }
- 
-   
- }
+    .card {
+        background-color: #D8E3F2;
+        display: flex;
+        P{
+            position: absolute;
+            top: 20%;
+            left: 20%;
+            transform: translate(-50%, -50%);
+            font-size: 20px;
+            background-color: #E7FF86;
+            border-radius: 50px;
+            padding: 5px;
+            
+        }
+    }
+    .card-title{
+        position: absolute;
+        top: 40%;
+        left: 20%;
+        transform: translate(-50%, -50%);
+        font-size: 24px;
+        font-weight: bold;
+    }
 
 
-.textocolecao{
+}
+
+
+.textocolecao {
 
     text-align: left;
     margin-left: 1px;
@@ -139,19 +159,16 @@ justify-content: center;
     font-size: 24px;
     font-weight: 700;
     color: #474747
+}
 
-
-
+.blusa {
+    width: 355px;
+    height: 234px;
+    margin-left: 32px;
+    
 
 
 }
-
-.blusa{
-    width: 100%;
-    height: auto;
-    margin-left: 15px;
-}
-
 
 
 
