fiz as coleções

--- a/style.css
+++ b/style.css
@@ -106,10 +106,9 @@ footer {
         justify-content: left;
         gap: 15px;
         font-family: Inter;
-    
-        {
+        
             font-size: 18px;
-        }
+          }
         p{
             font-size: 16px;
         }
@@ -142,7 +141,7 @@ footer {
     }
 
 
-}
+
 .divFinal {
     margin: 75px 0px 0px;
     display: grid;
@@ -246,3 +245,22 @@ footer {
         color: white;
         text-decoration: none;
 }
+#colecoes{
+    text-align: center;
+    font-weight: 700px;
+    font-size: 21px ;
+  }
+#imagens-colecao{
+    display: flex;
+ justify-content: center;
+ align-items: center;
+ padding: 10px;
+margin-top: 50px;
+gap: 80px;
+text-align: center;
+font-family: sans-serif;
+}
+
+
+
+
