--- a/pagina1.css
+++ b/pagina1.css
@@ -64,20 +64,22 @@ section {
         transform: translate(-50%, -50%);
         color: rgb(0, 0, 0);
         font-size: 24px;
-        font-weight: bold;
+        font-weight: bolder;
 
         h1 {
 
-            font-weight: 700;
+            font-weight: 750;
             font-size: 64px;
+
         }
 
         p {
-            font-family: Inter;
+
             font-weight: 400;
             font-size: 19.44px;
             line-height: 36.72px;
             letter-spacing: 0.81px;
+            color: #474747;
 
         }
 
@@ -91,15 +93,27 @@ section {
 
         .botao1 {
             width: 237px;
-            height: 51px;
-            border-radius: 8px;
+            height: 50px;
+            border-radius: 10px;
             background-color: #C92071;
             color: white;
+            border: none;
 
 
         }
 
+        .botao1:hover {
+            background-color: #a11a5c;
+        }
 
+        img {
+            width: 70px;
+            position: absolute;
+            top: 35%;
+            left: 75%;
+
+
+        }
     }
 
     .tenis_banner {
@@ -176,32 +190,23 @@ section {
 
 }
 
-.bolinhas {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    
-  }
-  
-  .bolinha {
-    width: 12px;
-    height: 12px;
-    background-color: #999;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    border: none;
-  }
-  
-  .bolinha.ativa {
-    background-color: #C92071;
-  }
 
-  
+
+.carousel-indicators [data-bs-target] {
+    width: 12px !important;
+    height: 12px !important;
+    border-radius: 50%;
+    background-color: #CCCCCC !important;
+    opacity: 0.5;
+    transition: 0.3s;
+    margin: 0 6px;
+}
+
+.carousel-indicators .active {
+    background-color: #C92071 !important;
+    opacity: 1;
+}
+
 
 
 
