cursor pointer no footer

--- a/pagina2.css
+++ b/pagina2.css
@@ -39,6 +39,7 @@ footer {
         }
         p{
             font-size: 16px;
+            cursor: pointer
         }
         p:hover{
             color: #C92071;
