--- a/pagina1.css
+++ b/pagina1.css
@@ -365,6 +365,7 @@ footer {
         }
         p{
             font-size: 16px;
+            cursor: pointer
         }
         p:hover{
             color: #C92071;
