--- a/cadastro.css
+++ b/cadastro.css
@@ -1,35 +1,72 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 body {
     margin: 0;
     padding: 0;
+    font-family: "Inter", sans-serif;
 }
-#cad{
-min-height: 100vh;
-border: 2px;
-border-color: black;
-background:linear-gradient(to top, white, rgb(126, 126, 245));
-display: flex;
+#cad {
+    min-height: 100vh;
+    border: 2px;
+    border-color: black;
+    background: linear-gradient(to top, white, rgb(126, 126, 245));
+    display: flex;
 }
+
 form {
     border: 1px solid black;
     border-radius: 4px;
     width: 583px;
     height: 399px;
-    margin-top: 150px;
+    margin-top: 100px;
     margin-left: 100px;
-    text-align: center;
+    text-align: start;
     background-color: #ffffff;
+}
+input {
+    width: 523px;
+    height: 60px;
+    border-radius: 8px;
+}
+.outras-formas-de-se-cadastrar {
+    display: flex;
+    p{
+        margin: 10px;
+    }
+    img{
+        width: 24px;
+        height: 24px;
+        margin: 7px;
+    }
 }
 * {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
 }
 
-body, html {
-    height: 100vh;
+.imgt {
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* margin-right: 70px; */
+    margin-left: 20px;
+    width: 350px;
+    height: 483px;
+}
+.imgt2 {
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* margin-right: 70px; */
+    width: 350px;
+    height: 483px;
+    margin-top: 150px;
+}
+.formulario{
+    margin: 20px;
     display: flex;
+    gap: 20px;
     flex-direction: column;
-    justify-content: space-between;
 }
 footer {
     background-color: #1f1f1f;
@@ -55,16 +92,19 @@ footer {
         justify-content: left;
         gap: 15px;
         font-family: Inter;
-        h3{
+
+        h3 {
             font-size: 18px;
         }
-        p{
+
+        p {
             font-size: 16px;
         }
-        p:hover{
+
+        p:hover {
             color: #C92071;
-            }
-        
+        }
+
     }
 
     .logod {
@@ -116,6 +156,7 @@ footer {
 .search-bar button:hover {
     background-color: #333;
 }
+
 .divFinal {
     margin: 75px 0px 0px;
     display: grid;
@@ -124,14 +165,10 @@ footer {
     align-content: center;
     margin-bottom: 1rem;
 }
+
 .tenis {
     display: flex;
     /* flex-wrap: wrap; */
     padding: 0;
-}
-.imgt {
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-margin-right: 70px;
+    justify-content: center;
 }
