--- a/cadastro.css
+++ b/cadastro.css
@@ -3,6 +3,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Inter", sans-serif;
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
 #cad {
     min-height: 100vh;
@@ -42,6 +44,7 @@ input {
     margin: 0;
     padding: 0;
     /* font-family: sans-serif; */
+box-sizing: border-box;
 }
 
 .imgt {
