--- a/pagina1.css
+++ b/pagina1.css
@@ -23,223 +23,45 @@ body {
 
 header {
     width: 100%;
+}
 
-    .logo {
-        display: flex;
-        align-items: center;
-        gap: 15px;
-        color: #C92071;
-
-    }
-
-    .logo img {
-        width: 33px;
-        height: 33px;
-    }
-
-    nav a {
-        color: rgb(0, 0, 0);
-        text-decoration: none;
-        font-weight: bold;
-        padding: 0px 0px;
-    }
-
-    nav a:hover {
-        text-decoration: underline;
-        color: #C92071;
-    }
-
-    .itens {
-        margin: 0;
-        display: flex;
-        gap: 0;
-        align-items: center;
-        padding: 0;
-        border: 30px;
-        justify-content: center;
-        list-style: none;
-        color: rgb(112, 110, 110);
-        cursor: pointer;
-    }
+header.logo {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    color: #C92071;
 
 }
 
-section {
-
-
-    .texto_na_imagem {
-        position: absolute;
-        top: 40%;
-        left: 30%;
-        transform: translate(-50%, -50%);
-        color: rgb(0, 0, 0);
-        font-size: 24px;
-        font-weight: bolder;
-
-        h1 {
-
-            font-weight: 750;
-            font-size: 64px;
-
-        }
-
-        p {
-
-            font-weight: 400;
-            font-size: 19.44px;
-            line-height: 36.72px;
-            letter-spacing: 0.81px;
-            color: #474747;
-
-        }
-
-        .oferta {
-            color: orange;
-            font-weight: 900;
-
-
-        }
-
-
-        .botao1 {
-            width: 237px;
-            height: 50px;
-            border-radius: 10px;
-            background-color: #C92071;
-            color: white;
-            border: none;
-
-
-        }
-
-        .botao1:hover {
-            background-color: #a11a5c;
-        }
-
-        img {
-            width: 70px;
-            position: absolute;
-            top: 35%;
-            left: 75%;
-
-
-        }
-    }
-
-    .tenis_banner {
-        position: absolute;
-        top: 20px;
-        left: 45%;
-    }
-
-    .ornamento {
-        position: absolute;
-        top: 50px;
-        left: 90%;
-
-    }
+header.logo img {
+    width: 33px;
+    height: 33px;
 }
 
-.coleçoes {
+header a {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    font-weight: bold;
+    padding: 0px 0px;
+}
 
-    display: grid;
-    grid-template-columns: 450px 450px 450px;
+header a:hover {
+    text-decoration: underline;
+    color: #C92071;
+}
+
+header.itens {
+    margin: 0;
+    display: flex;
+    gap: 0;
+    align-items: center;
+    padding: 0;
+    border: 30px;
     justify-content: center;
-
-    .card {
-        background-color: #D8E3F2;
-        display: flex;
-        width: 405px;
-        height: 251px;
-
-        P {
-            position: absolute;
-            top: 20%;
-            left: 20%;
-            transform: translate(-50%, -50%);
-            font-size: 20px;
-            background-color: #E7FF86;
-            border-radius: 50px;
-            padding: 5px;
-
-        }
-
-        a {
-            position: absolute;
-            top: 75%;
-            left: 25%;
-            transform: translate(-50%, -50%);
-            width: 153px;
-            height: 48px;
-            border-radius: 8px;
-            background-color: #F5F5F5;
-            color:#C92071;
-            border: none;
-            font-family: inter;
-            font-size: 16px;
-            text-align: center;
-            
-
-        }
-
-    }
-
-    .card-title {
-        position: absolute;
-        top: 40%;
-        left: 20%;
-        transform: translate(-50%, -50%);
-        font-size: 24px;
-        font-weight: bold;
-    }
-
-
+    list-style: none;
+    color: rgb(112, 110, 110);
+    cursor: pointer;
 }
-
-
-.textocolecao {
-
-    text-align: left;
-    margin-left: 1px;
-    margin-top: 38px;
-    margin-bottom: 20px;
-    width: 283px;
-    height: 38px;
-    font-size: 24px;
-    font-weight: 700;
-    color: #474747
-}
-
-.blusa {
-    width: 250px;
-    height: 234px;
-    margin-left: 138px;
-
-
-
-}
-
-
-
-.carousel-indicators [data-bs-target] {
-    width: 12px !important;
-    height: 12px !important;
-    border-radius: 50%;
-    background-color: #CCCCCC !important;
-    opacity: 0.5;
-    transition: 0.3s;
-    margin: 0 6px;
-}
-
-.carousel-indicators .active {
-    background-color: #C92071 !important;
-    opacity: 1;
-}
-
-
-
-
-
 
 #barraPesquisa {
     width: 499px;
@@ -251,9 +73,6 @@ section {
     background-color: #4747470a;
     padding-inline-start: 25px;
 }
-
-
-
 
 .search-bar button:hover {
     background-color: #333;
@@ -348,6 +167,187 @@ section {
 }
 
 
+.carrossel{
+
+
+    .texto_na_imagem {
+        position: absolute;
+        top: 40%;
+        left: 30%;
+        transform: translate(-50%, -50%);
+        color: rgb(0, 0, 0);
+        font-size: 24px;
+        font-weight: bolder;
+
+        h1 {
+
+            font-weight: 750;
+            font-size: 64px;
+
+        }
+
+        p {
+
+            font-weight: 400;
+            font-size: 19.44px;
+            line-height: 36.72px;
+            letter-spacing: 0.81px;
+            color: #474747;
+
+        }
+
+        .oferta {
+            color: orange;
+            font-weight: 900;
+
+
+        }
+
+
+        .botao1 {
+            width: 237px;
+            height: 50px;
+            border-radius: 10px;
+            background-color: #C92071;
+            color: white;
+            border: none;
+
+
+        }
+
+        .botao1:hover {
+            background-color: #a11a5c;
+        }
+
+        img {
+            width: 70px;
+            position: absolute;
+            top: 35%;
+            left: 75%;
+
+
+        }
+    }
+
+    .tenis_banner {
+        position: absolute;
+        top: 20px;
+        left: 45%;
+    }
+
+    .ornamento {
+        position: absolute;
+        top: 20px;
+        left: 90%;
+
+    }
+}
+
+
+.carousel-indicators [data-bs-target] {
+    width: 12px !important;
+    height: 12px !important;
+    border-radius: 50%;
+    background-color: #CCCCCC !important;
+    opacity: 0.5;
+    transition: 0.3s;
+    margin: 0 6px;
+}
+
+.carousel-indicators .active {
+    background-color: #C92071 !important;
+    opacity: 1;
+}
+
+
+.coleçoes {
+
+    display: grid;
+    grid-template-columns: 450px 450px 450px;
+    justify-content: center;
+
+    .card {
+        background-color: #D8E3F2;
+        display: flex;
+        width: 405px;
+        height: 251px;
+
+        P {
+            position: absolute;
+            top: 20%;
+            left: 20%;
+            transform: translate(-50%, -50%);
+            font-size: 20px;
+            background-color: #E7FF86;
+            border-radius: 50px;
+            padding: 5px;
+
+        }
+
+        a {
+            position: absolute;
+            top: 75%;
+            left: 25%;
+            transform: translate(-50%, -50%);
+            width: 153px;
+            height: 48px;
+            border-radius: 8px;
+            background-color: #F5F5F5;
+            color:#C92071;
+            border: none;
+            font-family: inter;
+            font-size: 16px;
+            text-align: center;
+            
+
+        }
+
+    }
+
+    .card-title {
+        position: absolute;
+        top: 40%;
+        left: 20%;
+        transform: translate(-50%, -50%);
+        font-size: 24px;
+        font-weight: bold;
+    }
+
+
+}
+
+
+.textocolecao {
+
+    text-align: left;
+    margin-left: 1px;
+    margin-top: 38px;
+    margin-bottom: 20px;
+    width: 283px;
+    height: 38px;
+    font-size: 24px;
+    font-weight: 700;
+    color: #474747
+}
+
+.blusa {
+    width: 250px;
+    height: 234px;
+    margin-left: 138px;
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -377,7 +377,7 @@ footer {
     justify-content: center;
     width: 100%;
 
-    .sera {
+    .geralFooter {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         font-size: small;
