Finalização pagina de Cadastro

--- a/cadastro.css
+++ b/cadastro.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+*{
+    font: rgba(71, 71, 71, 1);
+}
 body {
     margin: 0;
     padding: 0;
@@ -10,23 +13,47 @@ body {
     min-height: 100vh;
     border: 2px;
     border-color: black;
-    background: linear-gradient(to top, white, rgb(126, 126, 245));
+    background: linear-gradient(to top, rgb(215, 215, 245), rgb(186, 186, 248));
     display: flex;
 }
 form {
-    border: 1px solid black;
+    border: none;
     border-radius: 4px;
     width: 583px;
     height: 399px;
     margin-top: 100px;
     margin-left: 100px;
     text-align: start;
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 1);
+    color: rgba(71, 71, 71, 1);
+    display: flex;
+    flex-direction: column;
+}
+.formulario{
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
 }
 input {
     width: 523px;
     height: 60px;
     border-radius: 8px;
+    border: none;
+    background-color: rgb(247, 247, 247);
+    padding-left: 15px;
+}
+.criar-conta {
+    background-color: rgba(201, 32, 113, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    width: 523px;
+    height: 60px;
+    border-radius: 8px;
+    color: rgba(245, 245, 245, 1);
+    font-size: 16px;
+    font-weight: 700;
 }
 .outras-formas-de-se-cadastrar {
     display: flex;
@@ -38,6 +65,7 @@ input {
         height: 24px;
         margin: 7px;
     }
+    justify-content: center;
 }
 * {
     margin: 0;
