--- a/pagina1.css
+++ b/pagina1.css
@@ -329,7 +329,7 @@ header.itens {
     color: #474747
 }
 
-.blusa {
+.imagem_dos_cards {
     width: 250px;
     height: 234px;
     margin-left: 138px;
@@ -337,17 +337,6 @@ header.itens {
 
 
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
 .em_alta {
@@ -367,11 +356,34 @@ header.itens {
 .descontos {
     font-weight: bold;
     padding-left: 20px;
+    font-size: 24px;
 }
 
-.tt{
+.body_em_alta {
     background-color: rgb(211, 211, 211);
 }
+
+.texto_em_alta {
+    font-size: 24px;
+}
+
+.paragrafo_em_alta {
+    font-size: 24px;
+    text-decoration: line-through;
+}
+
+.promoçao_em_alta {
+    position: absolute;
+    top: 10%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    background-color: #E7FF86;
+    border-radius: 50px;
+    padding: 5px;
+    
+}
+
 
 
 
