--- a/pagina1.css
+++ b/pagina1.css
@@ -112,6 +112,7 @@ header {
     text-align: center;
     font-family: inter;
     cursor: pointer;
+    color: #000000;
     }
     #imagens-colecao img{
         padding: 12px;
@@ -121,7 +122,7 @@ header {
     
     #imagens-colecao img:hover{
         transform: translateY(-10px); 
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        transition: transform 0.5s ease, box-shadow 0.5s ease;
     box-shadow: 0 10px 20px rgb(189, 189, 189);
     border-radius: 50%;
     
@@ -130,6 +131,12 @@ header {
     h3{
         text-align: center;
         font-family: inter;
+        color: black;
+        position: relative;
+        top: 43px;
+    }
+    #back{
+        background-color: rgb(249, 248, 254);
     }
     
 section {
