--- a/pagina1.css
+++ b/pagina1.css
@@ -34,7 +34,8 @@ header.logo img {
     width: 33px;
     height: 33px;
 }
-.linksheader{
+
+.linksheader {
     display: flex;
     gap: 43px;
     font-size: medium;
@@ -43,32 +44,33 @@ header.logo img {
     cursor: pointer;
     padding: 25px;
     margin-left: 31px;
-    }
-    .linksheader a:hover{
-        color: #C92071;
-        text-decoration: underline;
-        text-decoration-thickness: 3px;
-        text-underline-offset: 6px;
-        transition: transform 0.3s ease, box-shadow 0.5s ease;
-        transform: translateY(-3px); 
-    
-    }
-    
-    
-    
-    .linksheader a{
-        color: #474747;
-    }
-    .links{
-        text-decoration: none;
-    }
-    .home{
-        text-decoration: underline;
-        text-decoration-thickness: 4px;
-        text-decoration-color: #C92071;
-        text-underline-offset: 6px;
-    }
-    
+}
+
+.linksheader a:hover {
+    color: #C92071;
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
+    text-underline-offset: 6px;
+    transition: transform 0.3s ease, box-shadow 0.5s ease;
+    transform: translateY(-3px);
+
+}
+
+.linksheader a {
+    color: #474747;
+}
+
+.links {
+    text-decoration: none;
+}
+
+.home {
+    text-decoration: underline;
+    text-decoration-thickness: 4px;
+    text-decoration-color: #C92071;
+    text-underline-offset: 6px;
+}
+
 header a {
     color: rgb(0, 0, 0);
     text-decoration: none;
@@ -93,185 +95,6 @@ header.itens {
     color: rgb(112, 110, 110);
     cursor: pointer;
 }
-
-
-
-section {
-
-
-    .texto_na_imagem {
-        position: absolute;
-        top: 40%;
-        left: 30%;
-        transform: translate(-50%, -50%);
-        color: rgb(0, 0, 0);
-        font-size: 24px;
-        font-weight: bolder;
-
-        h1 {
-
-            font-weight: 750;
-            font-size: 64px;
-
-        }
-
-        p {
-
-            font-weight: 400;
-            font-size: 19.44px;
-            line-height: 36.72px;
-            letter-spacing: 0.81px;
-            color: #474747;
-
-        }
-
-        .oferta {
-            color: orange;
-            font-weight: 900;
-
-
-        }
-
-
-        .botao1 {
-            width: 237px;
-            height: 50px;
-            border-radius: 10px;
-            background-color: #C92071;
-            color: white;
-            border: none;
-
-
-        }
-
-        .botao1:hover {
-            background-color: #a11a5c;
-        }
-
-        img {
-            width: 70px;
-            position: absolute;
-            top: 35%;
-            left: 75%;
-
-
-        }
-    }
-
-    .tenis_banner {
-        position: absolute;
-        top: 20px;
-        left: 45%;
-    }
-
-    .ornamento {
-        position: absolute;
-        top: 50px;
-        left: 90%;
-
-    }
-}
-
-.coleçoes {
-
-    display: grid;
-    grid-template-columns: 450px 450px 450px;
-    justify-content: center;
-
-    .card {
-        background-color: #D8E3F2;
-        display: flex;
-        width: 405px;
-        height: 251px;
-
-        P {
-            position: absolute;
-            top: 20%;
-            left: 20%;
-            transform: translate(-50%, -50%);
-            font-size: 20px;
-            background-color: #E7FF86;
-            border-radius: 50px;
-            padding: 5px;
-
-        }
-
-        a {
-            position: absolute;
-            top: 75%;
-            left: 25%;
-            transform: translate(-50%, -50%);
-            width: 153px;
-            height: 48px;
-            border-radius: 8px;
-            background-color: #F5F5F5;
-            color: #C92071;
-            border: none;
-            font-family: inter;
-            font-size: 16px;
-            text-align: center;
-
-
-        }
-
-    }
-
-    .card-title {
-        position: absolute;
-        top: 40%;
-        left: 20%;
-        transform: translate(-50%, -50%);
-        font-size: 24px;
-        font-weight: bold;
-    }
-
-
-}
-
-
-.textocolecao {
-
-    text-align: left;
-    margin-left: 1px;
-    margin-top: 38px;
-    margin-bottom: 20px;
-    width: 283px;
-    height: 38px;
-    font-size: 24px;
-    font-weight: 700;
-    color: #474747
-}
-
-.blusa {
-    width: 250px;
-    height: 234px;
-    margin-left: 138px;
-
-
-
-}
-
-
-
-.carousel-indicators [data-bs-target] {
-    width: 12px !important;
-    height: 12px !important;
-    border-radius: 50%;
-    background-color: #CCCCCC !important;
-    opacity: 0.5;
-    transition: 0.3s;
-    margin: 0 6px;
-}
-
-.carousel-indicators .active {
-    background-color: #C92071 !important;
-    opacity: 1;
-}
-
-
-
-
-
 
 #barraPesquisa {
     width: 499px;
@@ -376,10 +199,7 @@ section {
     text-decoration: none;
 }
 
-
 .carrossel {
-
-
     .texto_na_imagem {
         position: absolute;
         top: 40%;
@@ -390,29 +210,22 @@ section {
         font-weight: bolder;
 
         h1 {
-
             font-weight: 750;
             font-size: 64px;
-
         }
 
         p {
-
             font-weight: 400;
             font-size: 19.44px;
             line-height: 36.72px;
             letter-spacing: 0.81px;
             color: #474747;
-
         }
 
         .oferta {
             color: orange;
             font-weight: 900;
-
-
         }
-
 
         .botao1 {
             width: 237px;
@@ -421,8 +234,6 @@ section {
             background-color: #C92071;
             color: white;
             border: none;
-
-
         }
 
         .botao1:hover {
@@ -434,8 +245,6 @@ section {
             position: absolute;
             top: 35%;
             left: 75%;
-
-
         }
     }
 
@@ -449,10 +258,8 @@ section {
         position: absolute;
         top: 20px;
         left: 90%;
-
     }
 }
-
 
 .carousel-indicators [data-bs-target] {
     width: 12px !important;
@@ -469,65 +276,64 @@ section {
     opacity: 1;
 }
 
-
 .coleçoes {
 
     display: grid;
     grid-template-columns: 450px 450px 450px;
     justify-content: center;
+    align-items: center;
+    margin-bottom: 40px;
+}
 
-    .card {
-        background-color: #D8E3F2;
-        display: flex;
-        width: 405px;
-        height: 251px;
+.coleçoes .card {
+    background-color: #D8E3F2;
+    display: flex;
+    width: 405px;
+    height: 251px;
 
-        P {
-            position: absolute;
-            top: 20%;
-            left: 20%;
-            transform: translate(-50%, -50%);
-            font-size: 20px;
-            background-color: #E7FF86;
-            border-radius: 50px;
-            padding: 5px;
-
-        }
-
-        a {
-            position: absolute;
-            top: 75%;
-            left: 25%;
-            transform: translate(-50%, -50%);
-            width: 153px;
-            height: 48px;
-            border-radius: 8px;
-            background-color: #F5F5F5;
-            color: #C92071;
-            border: none;
-            font-family: inter;
-            font-size: 16px;
-            text-align: center;
-
-
-        }
-
-    }
-
-    .card-title {
+    P {
         position: absolute;
-        top: 40%;
+        top: 20%;
         left: 20%;
         transform: translate(-50%, -50%);
-        font-size: 24px;
-        font-weight: bold;
+        font-size: 20px;
+        background-color: #E7FF86;
+        border-radius: 50px;
+        padding: 5px;
     }
 
+    a {
+        display: flex;
+        position: absolute;
+        top: 75%;
+        left: 25%;
+        transform: translate(-50%, -50%);
+        width: 153px;
+        height: 48px;
+        border-radius: 8px;
+        background-color: #F5F5F5;
+        color: #C92071;
+        border: none;
+        font-family: inter;
+        font-size: 16px;
+        justify-content: center;
+        align-items: center;
+        font-weight: 700;
+    }
 
 }
 
+.titulo_dos_cards_colecao {
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
+    font-weight: bold;
+}
 
-.textocolecao {
+
+.H1_colecoes {
 
     text-align: left;
     margin-left: 1px;
@@ -540,35 +346,51 @@ section {
     color: #474747
 }
 
-.imagem_dos_cards {
+.imagem_dos_cards_colecoes {
     width: 250px;
     height: 234px;
     margin-left: 138px;
 }
 
+.H1_em_alta {
+
+    text-align: left;
+    margin-left: 1px;
+    margin-top: 38px;
+    margin-bottom: 20px;
+    width: 283px;
+    height: 38px;
+    font-size: 24px;
+    font-weight: 700;
+    color: #474747
+}
+
 .produtos_em_alta {
     background-color: #F9F8FE;
-
-
 }
 
 .em_alta {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-bottom: 40px;
+}
 
-    img {
-        width: 290px;
-    }
+.em_alta .card {
+    border: none;
+    border-radius: 0%;
+}
 
-    .card {
-        border: none;
-        border-radius: 0%;
-    }
-
+.em_alta img {
+    width: 290px;
+    transform: rotateY(10deg) rotateX(5deg);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
 
 .presos {
     display: flex;
+    justify-content: center;
+
 }
 
 .descontos {
@@ -584,22 +406,23 @@ section {
 
 .texto_em_alta {
     font-size: 24px;
+    text-align: center
 }
 
-.linkcolecao {
+.link_produtos_em_alta {
     color: #C92071;
     font-size: 18px;
     font-family: inter;
     text-decoration: none;
 }
 
-.titulocolecao {
+.titulo_produtos_em_alta {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.paragrafo_em_alta {
+.valor_em_alta {
     font-size: 24px;
     text-decoration: line-through;
 }
@@ -616,65 +439,40 @@ section {
 
 }
 
-#colecoes{
+#colecoes {
     text-align: center;
     font-weight: 70px;
-    font-size: 21px ;
+    font-size: 21px;
     font-family: inter;
-  }
-#imagens-colecao{
-    display: flex;
- justify-content: center;
- align-items: center;
-margin-top: 50px;
-gap: 80px;
-text-align: center;
-font-family: inter;
-cursor: pointer;
 }
-#imagens-colecao img{
+
+#imagens-colecao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    gap: 80px;
+    text-align: center;
+    font-family: inter;
+    cursor: pointer;
+}
+
+#imagens-colecao img {
     padding: 12px;
 }
 
-
-
-#imagens-colecao img:hover{
-    transform: translateY(-10px); 
+#imagens-colecao img:hover {
+    transform: translateY(-10px);
     transition: transform 0.3s ease, box-shadow 0.5s ease;
-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-border-radius: 50%;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    border-radius: 50%;
 
 }
 
-h3{
+h3 {
     text-align: center;
     font-family: inter;
 }
-
-/* .teste{
-    position: absolute;
-    top: 10%;
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 footer {
     background-color: #1f1f1f;
@@ -688,7 +486,6 @@ footer {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         font-size: small;
-
     }
 
     .informaçao,
@@ -703,6 +500,7 @@ footer {
 
         h3 {
             font-size: 18px;
+            display: flex;
         }
 
         p {
@@ -716,7 +514,7 @@ footer {
 
     }
 
-    .logod {
+    .logo_footer_digital {
         margin-right: 10px;
         display: flex;
         flex-direction: column;
@@ -724,22 +522,15 @@ footer {
 
     }
 
-    .logos {
-        /* img {
-            width: 20px;
-        } */
-
+    .logos_redes_sociais {
         display: flex;
         gap: 20px;
-
     }
 
     .copy {
         text-align: center;
         font-size: 13px;
     }
-
-
 }
 
 .search-bar input {
