--- a/pagina1.css
+++ b/pagina1.css
@@ -227,19 +227,6 @@ header.itens {
             font-weight: 900;
         }
 
-        .botao1 {
-            width: 237px;
-            height: 50px;
-            border-radius: 10px;
-            background-color: #C92071;
-            color: white;
-            border: none;
-        }
-
-        .botao1:hover {
-            background-color: #a11a5c;
-        }
-
         img {
             width: 70px;
             position: absolute;
@@ -259,6 +246,19 @@ header.itens {
         top: 20px;
         left: 90%;
     }
+}
+
+.botao1 {
+    width: 237px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: #C92071;
+    color: white;
+    border: none;
+}
+
+.botao1:hover {
+    background-color: #a11a5c;
 }
 
 .carousel-indicators [data-bs-target] {
@@ -473,6 +473,64 @@ h3 {
     text-align: center;
     font-family: inter;
 }
+
+.ultima_section {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+    margin: 100px;
+}
+
+.ultima_section .sapato {
+    position: absolute;
+    width: 573px;
+    height: 330px;
+    margin-top: 28px;
+}
+
+.ultima_section .ornamento_ult {
+    width: 466px;
+    height: 466px;
+    margin-left: 77px;
+}
+
+.texto_colecionador{
+
+    width: 589px;
+    height: 341px;
+    left: 692px;
+
+}
+
+.texto_colecionador .ultima_oferta {
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: 0.75px;
+    color: #C92071;
+}
+
+.ultima_section .titulo_ultima_section{
+    font-family: Inter;
+        font-weight: 700;
+        font-size: 48px;
+        line-height: 50px;
+        letter-spacing: 1px;
+        color: #474747;
+}
+
+.ultima_section .paragrafo_ultima_section{
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    letter-spacing: 0.75px;
+}
+
+
 
 footer {
     background-color: #1f1f1f;
